otus-homework-istio-master/istio/istio-manifest.yaml
# Создать Namespace
---
apiVersion: v1
kind: Namespace
metadata:
  name: istio-system
  labels:
    istio-injection: disabled

# Создать CRD, использующийся Istio operator'ом, чтобы развернуть Istio
