otus-homework-istio-master/istio/istiogatway.yaml

---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gateway
  namespace: default
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 8080
      name: http
      protocol: HTTP
    hosts:
    - "*"
    
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs
  namespace: default
spec:
  hosts:
  - "*"
  gateways:
  - gateway
  http:
  - match:
    - uri:
        prefix: /echoserver
    rewrite:
      uri: /
    route:
    - destination:
        host: echoserver
        port:
          number: 80
        subset: v2
      weight: 50
    - destination:
        host: proxy-app
        port:
          number: 80
      weight: 50
  - match:
    - uri:
        prefix: /proxy-app
    route:
        - destination:
           host: proxy-app
           port:
            number: 80
          weight: 50
